fix : scrollbar

--- a/frontend/templates/staticfiles/css/cores.css
+++ b/frontend/templates/staticfiles/css/cores.css
@@ -19,6 +19,7 @@ html {
 
   html::-webkit-scrollbar-thumb {
     background-color: #b3b3b3;
+    border-radius: 100px;
   }
 
   html::-webkit-scrollbar-thumb:hover {
